after the upgrade to fix topogeometry corruption:

SELECT topology.FixCorruptTopoGeometryColumn(schema_name, table_name, feature_column)
    FROM topology.layer;

* Fixes *

- #6019, make clean does not remove cunit generated files
           (Bas Couwenberg)
- #6020, schema qualify call in ST_MPointFromText (Paul Ramsey)


PostGIS 3.6.1
2025/11/13

This version requires PostgreSQL 12-18, GEOS 3.8 or higher, and Proj 6.1+.
To take advantage of all features, GEOS 3.14+ is needed.
To take advantage of all SFCGAL features, SFCGAL 2.2+ is needed.

If you are upgrading postgis_topology and have topogeometry columns, make sure to run
after the upgrade to fix topogeometry corruption:

SELECT topology.FixCorruptTopoGeometryColumn(schema_name, table_name, feature_column)
    FROM topology.layer;

* Fixes *

  - #5978, geometry_columns needs to still parse table constraints (Paul Ramsey)
  - #5987, ST_GeometryN fails for non-collections (Paul Ramsey)
  - #5991, CircularString distance error (Paul Ramsey)
  - #5994, Null pointer in ST_AsGeoJsonRow (Alexander Kukushkin)
  - #5998, ST_Distance error on CurvePolygon (Paul Ramsey)
  - #5962, Consistent clipping of MULTI/POINT (Paul Ramsey)
  - #5998, [tiger_geocoder] [security] CVE-2022-2625, make sure tables requires
           by extension are owned by extension
           authored: Andrey Borodin (Yandex), reported by Sergey Bobrov (Kaspersky)
  - #5754, ST_ForcePolygonCCW reverses lines (Paul Ramsey)
  - #5959, #5984, Prevent histogram target overflow when analysing massive
           tables (Darafei Praliaskouski)
  - #6012, Remove memory leak from lwcircstring_from_lwpointarray (Paul Ramsey)
  - #6013, [tiger_geocoder] Load Tiger 2025 data (Regina Obe)
  - #5983, [topology] topology.FixCorruptTopoGeometryColumn
           to fix corruption caused by 3.6.0 upgrade (Regina Obe, Francois Bonzon)


PostGIS 3.6.0
2025/09/01

This version requires PostgreSQL 12-18beta3, GEOS 3.8 or higher, and Proj 6.1+.